crates/service/tests/definition/snapshots/features__definition__goto_definition__imported_global_ident_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 32
    },
    "end": {
      "line": 2,
      "character": 39
    }
  }
}
