crates/service/tests/definition/snapshots/features__definition__goto_definition__imported_memory_int_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 16
    },
    "end": {
      "line": 2,
      "character": 20
    }
  }
}
