crates/service/tests/definition/snapshots/features__definition__goto_definition__imported_table_int_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 3
    },
    "end": {
      "line": 2,
      "character": 9
    }
  }
}
