crates/service/tests/definition/snapshots/features__definition__goto_definition__param_ident_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 17
    },
    "end": {
      "line": 2,
      "character": 23
    }
  }
}
