crates/service/tests/definition/snapshots/features__definition__goto_definition__param_via_type_def.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 21
    },
    "end": {
      "line": 2,
      "character": 23
    }
  }
}
